[JAIEXT-30] Remove legacy code